add: new post cpp-breifly-talk-obj-base

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 title: Quan-Jun Space
 subtitle: My work and life records
 description: I am a software engineer. This websie is my work and life records.
-keywords: 
+keywords: Software, LiteStyle, Reading
 author: Jimmy Shen
 language: en
 timezone: ''
