--- a/source/_data/keep.yml
+++ b/source/_data/keep.yml
@@ -12,7 +12,7 @@ menu:
   Home: /                         # 首页
   Archives: /archives             # 归档
   Tags: /tags                   # 标签
-  # Categories: /categories       # 分类
+  Categories: /categories       # 分类
   # Links: /links                 # 链接
   About: /about
   # Photos: /photos               # 相册
